force-app/src/objects/fferpcore__SequencePart__mdt.object
<CustomObject>
    <description>Contains records that define part of a sequence and the way in which to obtain the data for that part of the sequence. You can specify the Sequence Field record for which the part is to be used and the field from which the data is to be obtained.</description>
    <fields>
        <fullName>fferpcore__Index__c</fullName>
        <description>Number that determines the order of the sequence parts.</description>
        <inlineHelpText>Number that determines the order of the sequence parts.</inlineHelpText>
        <label>Index</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fferpcore__SequenceField__c</fullName>
        <description>Lookup to Sequence Field record to which this sequence part relates.</description>
        <inlineHelpText>Lookup to Sequence Field record to which this sequence part relates.</inlineHelpText>
        <label>Sequence Field</label>
        <referenceTo>fferpcore__SequenceField__mdt</referenceTo>
        <relationshipLabel>Parts</relationshipLabel>
        <relationshipName>Parts</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>fferpcore__Value__c</fullName>
        <description>Determines the sequence part data to be placed in the related sequence. Depending on the Class field, this can be the API name of a field or lookup relationship on the object defined in the related Sequence Field record.</description>
        <inlineHelpText>Determines the sequence part data to be placed in the related sequence. Depending on the Class field, this can be the API name of a field or lookup relationship on the object defined in the related Sequence Field record.</inlineHelpText>
        <label>Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Sequence Part</label>
    <pluralLabel>Sequence Parts</pluralLabel>
</CustomObject>